# pump_failure_prediction

./: .gitignore  README.md  environment.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
deployment/pipeline/: run_train_pipeline.py
deployment/steps/: preprocessing.py  training.py
environments/: devcontainer_environment.yml  preprocessing_environment.yml  training_environment.yml
notebooks/: water_pumps_eda.ipynb
reports/: data_case_water_supply.pptx
src/: __init__.py
src/data/: __init__.py  preprocessing.py  preprocessing_functions.py  run_preprocessing.py
src/pipeline/: run_train_pipeline.py
src/training/: __init__.py  run_training.py  training.py  training_functions.py
src/utils/: __init__.py  azureml_functions.py  training_functions.py
