[tool.poetry]
name = "pump_failure_detection"
version = "0.1.0"
description = "Detect water pump failures using Azure Machine Learning"
authors = ["Tomas Yanez <tomas.yanez@tomasyanez.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
azureml-core = "^1.58.0"
azureml-defaults = "^1.58.0"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
azureml-mlflow = "^1.58.0.post3"
plotly = "^5.24.1"
nbformat = "^5.10.4"
setuptools = "^75.5.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"